entity, controller hits 수정

--- a/src/main/resources/templates/member/myProfileEdit.html
+++ b/src/main/resources/templates/member/myProfileEdit.html
@@ -113,7 +113,9 @@
                 console.log(data.member);
                 alert('프로필 변경에 성공했습니다');
                 location.reload($('#nav-pf-img'));
-                $('#nav-pf-nick').replaceWith(`<p id="nav-pf-nick"> ${data.member.nickname}</p>`);
+                // $('#nav-pf-nick').replaceWith(`<p id="nav-pf-nick"> ${data.member.nickname}</p>`);
+                location.reload($('#nav-pf-nick'));
+
             })
             .fail(function (err) {
                 alert('프로필 변경에 실패했습니다');
