--- a/src/main/resources/static/css/previewImg.css
+++ b/src/main/resources/static/css/previewImg.css
@@ -17,6 +17,7 @@
     border: 2px solid #b7b7b7;
     /*font-size: 35px !important;*/
     padding: 0 !important;
+    cursor: pointer;
 }
 
 #Preview{
