--- a/src/main/resources/templates/fragments/myPage_nav.html
+++ b/src/main/resources/templates/fragments/myPage_nav.html
@@ -28,7 +28,7 @@
         </div>
         <div class="info-nav-btn">
             <p>&#183; &nbsp;</p>
-            <a th:href="@{/members/{memId}/edit/pf(memId=${session.loginMember.memId})}">
+            <a th:href="@{/members/{memId}/profile(memId=${session.loginMember.memId})}">
                 프로필 관리 </a>
         </div>
         <div class="info-nav-btn">
