--- a/src/main/resources/static/css/review_modal.css
+++ b/src/main/resources/static/css/review_modal.css
@@ -17,7 +17,7 @@
     left: 50%;
     width: 300px;
     height: 220px;
-    padding: 40px;
+    padding:  30px;
     margin: 0;
 
     text-align: center;
@@ -33,6 +33,10 @@
     overflow-y: auto;
 }
 
+.modal_box {
+    margin: 10px 0;
+    font-size: 20px;
+}
 .review_modal_btn {
     cursor: pointer;
     color: #111;
