--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -85,7 +85,7 @@
                 /*웹소켓 연결 소스*/
                 function connect() {
                     //StompConfig.java에 설정된 endpoint로 SockJS 객체, StompClient 객체 생성
-                    var socket = new SockJS("http://localhost:8888/gs-guide-websocket");
+                    var socket = new SockJS("http://172.30.1.23:8888/gs-guide-websocket");
                     //do Handshake
                     stompClient = Stomp.over(socket);
 
