--- a/src/main/resources/templates/memberHome.html
+++ b/src/main/resources/templates/memberHome.html
@@ -191,14 +191,22 @@
     </section>
     <div class="reviewModal review_modal">
         <div class="review_modal_body">
-            <a id="review_hide_btn" th:if="${session.loginMember != null && session.loginMember.memId.equals(memId)}">
-                리뷰 숨김</a>
-            <a id="review_del_btn" th:if="${session.loginMember != null && !session.loginMember.memId.equals(memId)}">
-                리뷰 삭제</a>
+            <div class="modal_box">
+                <a id="review_hide_btn" th:if="${session.loginMember != null && session.loginMember.memId.equals(memId)}">
+                    리뷰 숨김</a>
+            </div>
+            <div class="modal_box">
+                <a id="review_del_btn" th:if="${session.loginMember != null && !session.loginMember.memId.equals(memId)}">
+                    리뷰 삭제</a>
+            </div>
             <hr/>
-            <a id="review_detail_btn">리뷰 보기</a>
+            <div class="modal_box">
+                <a id="review_detail_btn">리뷰 보기</a>
+            </div>
             <hr/>
-            <a id="review_close_btn">취소</a>
+            <div class="modal_box">
+                <a id="review_close_btn">취소</a>
+            </div>
         </div>
     </div>
 </div>
@@ -206,7 +214,6 @@
 <div layout:fragment="script">
     <script src="/js/review_modal.js"></script>
     <script th:inline="javascript">
-        console.log("엥")
         const mannerDom = document.getElementsByClassName("manner")[0];
         const mannerScoreDom =document.getElementsByClassName("mannerScore")[0];
         const mannerScore=[[${member.mannerScore}]];
